# DeepLSD

./: pyproject.toml  requirements.txt
deeplsd/models/: deeplsd.py
notebooks/: quickstart_demo.ipynb
