[project]
name = "deeplsd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brewer2mpl>=1.4.1",
    "cython>=3.1.3",
    "flow-vis>=0.1",
    "future>=1.0.0",
    "h5py>=3.14.0",
    "jupyter>=1.1.1",
    "kornia>=0.6",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pytlsd>=0.0.5",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "tensorboard>=2.20.0",
    "torch>=1.12",
    "torchvision>=0.13",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
pytlsd = { git = "https://github.com/iago-suarez/pytlsd.git", rev = "4180ab8" }

# [build-system]
# requires = ["scikit-build", "setuptools", "wheel", "pybind11", "cmake"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

